The bug causing my navbar drop down to break/be invisible was due to not having a fontawesome cdn link where the correct icons could load. That link has now been added to the bottom of the head element in base.html

--- a/cardealership/static/css/style.css
+++ b/cardealership/static/css/style.css
@@ -4069,9 +4069,9 @@ table.info-tabel tr td {
   top: 50%;
   width: 32px;
   transform:translateY(-50%)
-   -moz-transform:translateY(-50%);
-    -o-transform:translateY(-50%);
-     -webkit-transform:translateY(-50%);
+   -moz-transform:translateY(-50%)
+    -o-transform:translateY(-50%)
+     -webkit-transform:translateY(-50%)
      -md-transform:translateY(-50%)
 } 
 .td_divider {
@@ -5006,8 +5006,6 @@ h3 {
 }
 
 }
-
-
 
 @media (min-width:768px) and (max-width:991px) {
 .navbar-nav > li {
